# DeepRespNet

./: .bentoignore  .gitignore  ModelPredictionForUnseenData.csv  README.md  app.py  bentofile.yaml  linechart.py  loading.ipynb  model4accuracy.yaml  model5_accuracy_epoch_values.csv  modified_patient_diagnosis.csv  preprocessing.ipynb  pyproject.toml  requirements.txt  service.py  test.ipynb  transfirmation.ipynb
.streamlit/: config.toml
archive/app/: app.py  linechart.py  model5_training_history.pkl
archive/app/.streamlit/: config.toml
archive/models/: model4_training_history.pkl
archive/notebooks/: loading.ipynb  transfirmation.ipynb
archive/results/: ModelPredictionForSeenData.csv  accuracy_data.txt
bentoml/: client_id
bentoml/bentos/deeprespnet/: latest
bentoml/bentos/deeprespnet/mkmyowc6hc5cxi3s/: README.md  bento.yaml
bentoml/bentos/deeprespnet/mkmyowc6hc5cxi3s/apis/: openapi.yaml  schema.json
bentoml/bentos/deeprespnet/mkmyowc6hc5cxi3s/env/docker/: Dockerfile
bentoml/bentos/deeprespnet/mkmyowc6hc5cxi3s/env/python/: requirements.in  requirements.txt
bentoml/bentos/deeprespnet/mkmyowc6hc5cxi3s/src/: bentofile.yaml
bentoml/bentos/deeprespnet/mkmyowc6hc5cxi3s/src/src/features/: class_labels_encoding.py
bentoml/bentos/deeprespnet/mkmyowc6hc5cxi3s/src/src/prediction/: prediction.py  predictions.py  test.ipynb
bentoml/models/lung_sound_classifier/: latest
bentoml/models/lung_sound_classifier/f6wkfuc6gokal33a/: config.json  metadata.json  model.yaml
bentoml/prometheus_multiproc_dir/: counter_99771.db  gauge_livesum_99771.db  histogram_99771.db
notebooks/: 01_preprocessing.ipynb  02_relabel_diagnosis.ipynb  03_transformation.ipynb  patient_diagnosis_relabelled.csv
src/features/: audio_augmentations.py  mfcc_feature_extraction.py
src/models/: model_design_and_training.py  prepare_train_test_data.py
src/prediction/: prediction.py  test.ipynb
src/prediction/models/: training_history.npy
src/utils/: visualisation.py
